--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -48,9 +48,14 @@ h1, h2, h3 {
   background-color: #373B44;
 }
 
-
+/* Home Page styles */
 .home-callout {
   color: white;
   padding-top: 50px;
   padding-bottom: 100px;
+}
+
+.home-signup-links {
+  margin-top: 30px;
+  
 }
