--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,3 +3,23 @@
   <h3>A membership site where developers come together to share ideas
      and connect with entrepreneurs.</h3>
 </div> 
+<div class="container home-signup-links">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card bg-light p-3">
+        <h2 class="text-center">Basic Membership</h2>
+        <h4>Sign up for free and get basic access to the platform</h4>
+        <br>
+        <a href="#" class="btn btn-primary btn-block">Sign up with Basic</a>
+      </div>
+    </div>
+     <div class="col-md-6">
+      <div class="card bg-light p-3">
+        <h2 class="text-center">Pro Membership</h2>
+        <h4>Sign up for the pro account for GH50/month and get access to the platform and contact information!</h4>
+        <br>
+        <a href="#" class="btn btn-success btn-block">Sign up with Basic</a>
+      </div>
+     </div>
+  </div>
+</div>
