Removed the default registration link and created routes for both basic and pro plan registration

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
         <h2 class="text-center">Basic Membership</h2>
         <h4>Sign up for free and get basic access to the platform</h4>
         <br>
-        <a href="#" class="btn btn-primary btn-block">Sign up with Basic</a>
+        <a  class="btn btn-primary btn-block" href="/register/freetier">Sign up with Basic</a>
       </div>
     </div>
      <div class="col-md-6">
@@ -18,7 +18,7 @@
         <h2 class="text-center">Pro Membership</h2>
         <h4>Sign up for the pro account for GH50/month and get access to the platform and contact information!</h4>
         <br>
-        <a href="#" class="btn btn-success btn-block">Sign up with Basic</a>
+        <a  class="btn btn-success btn-block" href="/register/freetier">Sign up with Pro</a>
       </div>
      </div>
   </div>
