--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
         <button type="submit" class="btn btn-primary btn-block">Login</button>
       </form>
       <p class="lead mt-4">
-        No Account? <a href="/register">Register</a>
+        No Account? <a href="/"> Go to the home page and chose a plan to register</a>
       </p>
     </div>
   </div>
