--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
         <h2 class="text-center">Pro Membership</h2>
         <h4>Sign up for the pro account for GH50/month and get access to the platform and contact information!</h4>
         <br>
-        <a  class="btn btn-success btn-block" href="/register/freetier">Sign up with Pro</a>
+        <a  class="btn btn-success btn-block" href="/register/pro">Sign up with Pro</a>
       </div>
      </div>
   </div>
