--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row mt-5">
     <div class="col-md-6 m-auto">
+      <h1 class="text-center mb-3">
+        <i class="fas fa-user-plus"></i> Basic Account </h1>
+        <p>Sign up for free and get basic access to the platform!</p>
       <div class="card card-body bg-light">
-        <h1 class="text-center mb-3">
-          <i class="fas fa-user-plus"></i> Register
-        </h1>
         <%- include('partials/messages') %>
         <form autocomplete="off" action="/register" method="POST">
           <div class="form-group">
