Modified the registration procedures

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,7 +6,7 @@
         <p>Sign up for free and get basic access to the platform!</p>
       <div class="card card-body bg-light">
         <%- include('partials/messages') %>
-        <form autocomplete="off" action="/register" method="POST">
+        <form autocomplete="off" action="/register/freetier" method="POST">
           <div class="form-group">
             <label for="name">Name</label>
             <input type="name" id="name" name="name" class="form-control"
