--- a/views/proAccSignup.ejs
+++ b/views/proAccSignup.ejs
@@ -5,7 +5,7 @@
         <p>Sign up for the pro account for GH50/month and get exclusive access to the platform and contact information!</p>
       <div class="card card-body bg-light">
         <%- include('partials/messages') %>
-        <form autocomplete="off" action="/register" method="POST">
+        <form autocomplete="off" action="/register/pro" method="POST">
           <div class="form-group">
             <label for="name">Name</label>
             <input type="name" id="name" name="name" class="form-control"
@@ -27,45 +27,6 @@
             value="<%= typeof name != 'undefined' ? name : '' %>" required/>
           </div>
 
-          <div class="form-group">
-            <label for="username">Full name (on the card)</label>
-            <input type="text" name="username" placeholder="Jason Doe" required class="form-control">
-          </div>
-          <div class="form-group">
-            <label for="cardNumber">Card number</label>
-            <div class="input-group">
-              <input type="text" name="cardNumber" placeholder="Your card number" class="form-control" required>
-              <div class="input-group-append">
-                <span class="input-group-text text-muted">
-                                            <i class="fa fa-cc-visa mx-1"></i>
-                                            <i class="fa fa-cc-amex mx-1"></i>
-                                            <i class="fa fa-cc-mastercard mx-1"></i>
-                                        </span>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-8">
-              <div class="form-group">
-                <label><span class="hidden-xs">Expiration</span></label>
-                <div class="input-group">
-                  <input type="number" placeholder="MM" name="" class="form-control" required>
-                  <input type="number" placeholder="YY" name="" class="form-control" required>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="form-group mb-4">
-                <label data-toggle="tooltip" title="Three-digits code on the back of your card">CVV
-                                            <i class="fa fa-question-circle"></i>
-                                        </label>
-                <input type="text" required class="form-control">
-              </div>
-            </div>
-
-
-
-        
           <button type="submit" class="btn btn-primary btn-block"> Register</button>
             
         </form>
