--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,3 +1,5 @@
 <h1 class="mt-4">Dashboard</h1>
 <p class="lead mb-3">Welcome <%= name %></p>
+
+<a class="btn btn-secondary " href="/profile/new">Create your profile!</a>
 <a href="/logout" class="btn btn-secondary">Logout</a>
